[project]
name = "isucari-python"
version = "0.1.0"
description = "ISUCON9 qualifier python implementation"
requires-python = ">=3.13"
dependencies = [
    "Flask==3.1.3",
    "gunicorn==26.0.0",
    "mysqlclient==2.2.8",
    "bcrypt==5.0.0",
    "requests==2.33.1",
    "python-dotenv==1.2.2",
]

[tool.uv]
package = false
